frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: nkrash/my-static-site15  # ✅ Your Docker Hub image
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "20m"
              memory: "64Mi"
